# maml

./: .gitignore  CMakeLists.txt  Makefile  ROADMAP.md  TODOS  TODOS.md  bundle_tests.py  dune-project  go.mod  go.sum  grammar.md  main.go  maml.opam  pyproject.toml  runtime_manifest.json  test-cases.txt
.devcontainer/: devcontainer-lock.json  devcontainer.json  setup.sh
ast/: ast.go  decl.go  expr.go  stmt.go  types.go
backend/: CMakeLists.txt  backend.cpp
backend/include/: CodegenContext.h  CodegenContext.hpp  ErrorHandler.h  ExprGenerator.h  ExprGenerator.hpp  MemoryManager.h  ProgramGenerator.h  ProgramGenerator.hpp  RuntimeConstants.h  StmtGenerator.h  StmtGenerator.hpp  TypeLowering.h  TypeLowering.hpp  autogen_runtime.hpp  autogen_runtime.inc  mir_generated.hpp  types_generated.hpp
backend/include/mir/: mir_generated.hpp
backend/src/: CodegenContext.cpp  CompoundOps.cpp  ContainerOps.cpp  ControlFlowOps.cpp  ErrorHandler.cpp  ExprCalls.cpp  ExprContainers.cpp  ExprControlFlow.cpp  ExprCore.cpp  ExprOperators.cpp  MemoryManager.cpp  MemoryOps.cpp  ProgramGenerator.cpp  StmtGenerator.cpp  TypeLowering.cpp  main.cpp
cmd/maml/: main.go
codegen/: codegen.go
compiler/: compiler.go
driver/: pipeline.go
frontend/: autogen_symbols.go  compiler.go  emitter.go
frontend/alloc/: alloc_pass.go
frontend/arc/: arc_pass.go
frontend/ast/: ast.go  ast.helpers.go  ast.schema.yaml  ast.strings.go  ast_generated.go  async.go  clone.go  decl.go  dto.go  errors.go  expr.go  generate_ast.py  json.go  match.go  methods.go  methods_generated.go  stmt.go  strings.go  types.go  visitor.go
frontend/cfg/: analysis.go  analyze.go  builder.go  cfg_test.go  consteval.go  debug.go  graph.go  match.go  result.go  terminator.go
frontend/codegen/: codegen.go  expr.go  fn.go  match.go  runtime.go  stmt.go  utils.go
frontend/desugar/: desugar.go  expr.go  stmt.go
frontend/escape/: analyzer.go  analyzer_test.go  escape.go  escape_test.go
frontend/hir/: ast.go  decl.go  expr.go  gen_hir.go  hir.go  hir_generated.go  hir_schema.json  lower.go  lower_generated.go  stmt.go  translator.go
frontend/layout/: layout.go
frontend/lexer/: asi.go  lexer.go  lexer_test.go  scanner.go
frontend/liveness/: liveness.go  liveness_test.go
frontend/lower/: aggregate_pass.go  aggregate_pass_test.go  allocation_pass.go  allocation_pass_test.go  arc_pass.go  arc_pass_test.go  async_pass.go  async_pass_test.go  inline_pass.go  inline_pass_test.go  lowering_pass.go  lowering_pass_test.go
frontend/mir/: builder.go  cpp_mir.tmpl  emitter.go  export.go  flatten.go  gen_cpp_mir.go  gen_mir.go  graph.go  instructions.go  mir_generated.go  mir_test.go  program.go  runtime_calls_generated.go  terminator.go
frontend/ownership/: analyzer.go  ownership_test.go  state.go
frontend/parser/: decl.go  decl_parser.go  expr.go  expr_parser.go  helpers.go  match.go  parser.go  parser_test.go  precedence.go  stmt.go  stmt_parser.go
frontend/passes/: alloc_pass.go  alloc_pass_test.go  arc_pass.go  arc_pass_test.go  borrow.go  drop_injector.go  escape.go  linear_lower.go  liveness.go  liveness_test.go  lower_types.go  pipeline.go  prune.go  sroa.go
frontend/prune/: prune.go
frontend/sema/: analyzer.go  expression.go  function.go  generics.go  mapper.go  match.go  methods.go  rule_decls.go  rule_exprs.go  rule_stmts.go  rules.go  scope.go  sema_test.go  statement.go  symbol.go  type_resolution.go  types.go
frontend/tast/: ast.go  decl.go  expr.go  generate_tast.py  helpers.go  match.go  methods.generated.go  methods.go  stmt.go  strings.go  tast.go  tast.schema.yaml  tast_generated.go  tast_schema.json
frontend/token/: token.go  tokentype_string.go
frontend/types/: gen_types.go  json.go  method.go  runtime_generated.go  symbol.go  types.go  types_generated.go
hir/: emitter.go
lexer/: lexer.go  lexer_test.go  token.go  tokentype_string.go
lib/: codegen.ml  dune  lexer.mll  parser.mly  syntax.ml
meta/: ast.tmpl  ast_schema.json  gen_ast.go  gen_hir.go  gen_mir_cpp.go  gen_mir_go.go  gen_runtime.go  gen_tast.go  gen_types.go  hir.tmpl  hir_lower.tmpl  hir_schema.json  mir_cpp.tmpl  mir_go.tmpl  mir_runtime_go.tmpl  mir_schema.json  runtime_cpp.tmpl  runtime_go.tmpl  runtime_schema.yaml  runtime_zig.tmpl  tast.tmpl  tast_schema.json  types_cpp.tmpl  types_go.tmpl  types_schema.yaml
parser/: decl_parser.go  expr_parser.go  parser.go  parser_test.go  stmt_parser.go
runtime/: build.zig  build.zig.zon  runtime.zig
sema/: sema.go  sema_test.go
test/: a.out  dune  test1.maml  test_out.asm
token/: token.go  tokentype_string.go
toolchain/: clang.go  driver.go
tools/: codegen.py  gen_runtime.go  runtime_cpp.tmpl  runtime_schema.yaml  runtime_zig.tmpl
(+124 files in other folders)
